Cleanup on intro screen

--- a/config/locales/intro.en.yml
+++ b/config/locales/intro.en.yml
@@ -18,8 +18,9 @@ en:
             one_one: >
                 Collaboration can look different for 
                 everyone. 
-            one_two: But have you ever experienced 1 or more of these scenarios
-             in group projects?
+            one_two: >
+                But have you ever experienced any of these scenarios
+                in group projects?
             two_one: >
                 Let's take a look at some examples of unequal group 
                 work participation...
@@ -30,13 +31,17 @@ en:
             three_two: > 
                 Leave it to George: One person does all the work and 
                 everyone else watches
-            four_one: Or... does this sound familiar? 
+            four_one: Or maybe this sounds familiar? 
             four_two: >
-                Social loafers: One or more students slack off while 
-                everyone else does the work 
+                Social loafers or Free Riders: One or more students
+                slack off while everyone else does the work 
             five_one: What would you do in these situations?     
-            five_two: Don't wait until the end of the semester to get help from your professor...
-            six_one: What if there was a way for your professor to help before things got out of hand? 
+            five_two: >
+                Do you have to wait until the end of the semester to get help
+                from your professor?
+            six_one: >
+                What if there was a way for your professor to help
+                before things got out of hand? 
             six_two: Now there is!
             seven_one: 
                 title: CoLab.online can help!
