--- a/config/locales/projects.en.yml
+++ b/config/locales/projects.en.yml
@@ -22,6 +22,7 @@ en:
     start_date_lbl: Project start date
     end_date_lbl: Project end date
     opens: Opens every
+    style: Input style
     no_group: unassigned
     rescore: rescore
     new_group: New group name
