--- a/config/locales/home.ko.yml
+++ b/config/locales/home.ko.yml
@@ -22,222 +22,216 @@
 ko:
   time:
     formats:
-      tz_clarity: "%a, %b %-d at %-l:%M%P %Z"
-      short_date: "%a, %b %-d"
-      datestamp: "%Y%m%d"
-      date_field: "%Y-%m-%d"
-  title: CoLab
-  task_name: Task Name
-  email: Email
-  email_redacted: [email redacted]
-  status: Status
-  course_name: Course Name
-  student: Student
-  student_names: Student names
-  group: Group
-  groups: Groups
-  group_names: Group names
-  history: History
-  about_you: About You
-  calc_diversity: Perspectives
-  users: Users
-  diversity_score: Perspective Points
-  calc_diversity_sub: Tell me the score!
-  clear: Clear
-  calc_it: Calculate a Diversity Score
-  ds_emails_lbl: Enter the emails of the proposed team members
-  dates: Dates
-  open_date: Open Date
-  start_date: Start Date
-  close_date: Close Date
-  completion_date: Completion Date
-  individual: Individual
-  type: Type
-  expired: Expired
-  bingo_game: Bingo! Game
-  experience: Group Experience
-  assignment: Assignment
-  other_info: Other information
-  start_dow: Start DOW
-  end_dow: End DOW
-  end_date: End Date
-  task_view: Task View
-  month_view: Month View
-  week_view: Week View
-  activities: Activities
-  consent_form: Consent Form
-  actions: Actions
-  activate: Activate?
-  back: Back
-  next: Next
-  note: Note
-  show: Show
-  edit: Edit
-  save: Save
-  add: Add!
-  submit: Submit
+      tz_clarity: "%요일, %월 %-일 at %-l:%M%P %Z"
+      short_date: "%요일, %월 %-일"
+      datestamp: "%년%월%일"
+      date_field: "%년-%월-%일"
+  title: 코랩
+  task_name: 이름
+  email: 이메일
+  email_redacted: [이메일 생략됨]
+  status: 상태
+  course_name: 수업명
+  student: 학생
+  student_names: 학생 이름
+  group: 그룹
+  groups: 그룹들
+  group_names: 그룹명
+  history: 진행 상황
+  about_you: 자기 소개
+  calc_diversity: 견해 
+  users: 사용자
+  diversity_score: 견해 점수
+  calc_diversity_sub: 점수를 말해줘!
+  clear: 지우기
+  calc_it: 다양성 점수 계산
+  ds_emails_lbl: 팀멤버 이메일 입력
+  dates: 날짜
+  open_date: 개시 날짜
+  start_date: 시작 날짜
+  close_date: 종료 날짜
+  completion_date: 완료 날짜
+  individual: 개인
+  type: 종류
+  expired: 기한 완료
+  bingo_game: 빙고 게임!
+  experience: 그룹 경험
+  assignment: 과제
+  other_info: 기타 정보
+  start_dow: DOW 시작
+  end_dow: DoW 끝
+  end_date: 마감 날짜
+  task_view: 할 일 보기
+  month_view: 월별 보기
+  week_view: 주간 보기
+  activities: 활동
+  consent_form: 동의서 양식
+  actions: 실행
+  activate: 활성화
+  back: 뒤로
+  next: 다음
+  note: 메모
+  show: 보여주기
+  edit: 편집하기
+  save: 저장하기
+  add: 추가하기
+  submit: 제출하기
   #toolbar
-  profile: Profile
-  c_panel: Admin&hellip;
-  reports: Reports
-  administration: Administration
-  resp_summ: Response Summary
-  resp_data: Response Data
-  coming_soon: Coming soon!
-  logout: Logout
-  login: login
-  none_selected: None selected
-  not_available: Not Available
+  profile: 개요
+  c_panel: 관리 패널&hellip;
+  reports: 보고서
+  administration: 관리
+  resp_summ: 답변 요약
+  resp_data: 답변 날짜
+  coming_soon: 개봉 박두!
+  logout: 로그아웃
+  login: 로그인
+  none_selected: 선택 안함
+  not_available: 사용 불가
   #demo materials
-  demo_title: '%{orig} (DEMO)'
-  demo: Demo
-  demo_group: SuperStars
-  demo_project: Research Paper
+  demo_title: '%{orig} (데모)'
+  demo: 시범
+  demo_group: 수퍼스타들
+  demo_project: 연구보고서
   demo_project_description: >
-    This project involves researching the topic decided in your class
-    and working with your team to author a paper thoroughly detailing
-    all you've learned on the topic.
-  demo_course_name: Advanced Collaborative Research
+    이 프로젝트는 수업에서 결정된 주제를 연구하고, 팀과 협력하여 
+    배운 내용을 자세히 설명하는 논문을 작성하는 것을 목표로 합니다.
+  demo_course_name: 고급 협력 연구
   #admin functions
-  about: About
-  back_to_course: Back to course
-  back_to_courses: Back to the list of courses
-  support: Support
+  about: 소개
+  back_to_course: 코스로 돌아가기
+  back_to_courses: 코스 목록으로 돌아가기
+  support: 지원
   avail_body: >
-    The %{activity_name} is now available for you on %{site_link}. Please
-    %{login_link} at your earliest convenience to have a look and complete
-    it.
+    %{activity_name} 활동이 %{site_link}에서 사용 가능합니다. 가능한 빨리 
+    %{login_link}에 로그인하여 확인하고 완료해 주세요.
   course_invite_body: >
-    (1){You've been invited to participate in the following course:};
-    (2-inf){You've been invited to participate in the following {{count}} courses:}
-  course_invite_close: Please log in to %{site_link} accept or decline this enrollment.
+    (1){다음 수업에 참여하도록 초대되었습니다:};
+    (2-inf){다음 {{count}}개의 수업에 참여하도록 초대되었습니다:}
+  course_invite_close: %{site_link}에 로그인하여 이 등록을 수락하거나 거부하세요.
   reminder_body: >
-    This email is to serve as a friendly reminder that you have an open
-    task waiting for you at this time. Please login to %{site_link} at your
-    earliest convenience to complete what is available.
+    이 이메일은 현재 대기 중인 할 일이 있음을 상기시켜 드리기 위해 발송되었습니다. 
+  reminder_body: >
+    이 이메일은 현재 대기 중인 할 일이 있음을 상기시켜 드리기 위해 발송되었습니다. 
+    가능한 한 빨리 %{site_link}에 로그인하여 완료해 주세요.
   summary_body: >
-    Below is your students' completion report from the task %{task_name} in the
-    course %{course_name} which recently completed at %{site_link}.
+    아래는 %{site_link}에서 최근 완료된 %{course_name}의 %{task_name} 과제에 대한 
+    학생들의 완료 보고서입니다.
   enrolled_students:
-    one: There is only one student enrolled in the course.
-    other: There are %{count} students enrolled in the course.
-  email_close: Thank you!
-  support_formal: CoLab Support
-  support_menu: Contact Support
-  demo_surname_1: John
-  demo_fam_name_1: Smith
-  demo_user_tz: Seoul
-  copy: Copy
-  destroy: Destroy
-  remove: Remove
-  confirmation: Are you sure?
-  accept: Accept
-  decline: Decline
-  waiting: Waiting
-  project: Project
-  complete: Completed
-  completed_at: Completed at
-  incomplete: In Progress
-  not_started: Not Started
-  n_a: N/A
-  not_given: <not given>
-  not_set: Not set
-  instructors: Instructors
-  students: Students
-  student: Student
+    one: 이 수업에는 한 명의 학생만 등록되어 있습니다. 
+    other: 이 수업에는 %{count}명의 학생이 등록되어 있습니다. 
+  email_close: 감사합니다!
+  support_formal: 코랩 지원
+  support_menu: 지원 문의
+  demo_surname_1: 존
+  demo_fam_name_1: 스미스
+  demo_user_tz: 서울
+  copy: 복사
+  destroy: 삭제
+  remove: 제거
+  confirmation: 확실합니까?
+  accept: 수락
+  decline: 거부
+  waiting: 대기 중
+  project: 프로젝트
+  complete: 완료됨
+  completed_at: 완료 시간
+  incomplete: 진행 중
+  not_started: 시작 안 됨
+  n_a: 해당 없음
+  not_given: <제공되지 않음>
+  not_set: 설정 안 됨
+  instructors: 강사들
+  students: 학생들
+  student: 학생
   #roles
-  instructor: instructor
-  assistant: assistant
-  enrolled_student: enrolled student
-  invited_student: invited student
-  declined_student: declined student
-  dropped_student: dropped student
-  no_projects: No projects
-  exps: Experiences
-  terms_lists: Terms Lists
-  terms_list: Terms List
-  terms_review: Terms Review
-  course: Course
-  school: School
-  schools_edit: Schools
-  rubrics_edit: Rubrics
-  consent_forms_edit: Consent Forms
-  courses_edit: Courses
-  reporting: Reporting Center
-  experiences_edit: Experiences
-  bingo_games_edit: Terms lists
-  projects_edit: Projects
-  concepts_edit: Concepts
-  active: Active
-  inactive: Inactive
-  details: Details
-  description: Description
-  for: For
-  name: Name
-  family_name: Family Name
-  given_name: Given Name
-  number: Number
-  member: Team Member
+  instructor: 강사
+  assistant: 조교
+  enrolled_student: 등록된 학생
+  invited_student: 초대된 학생
+  declined_student: 거부된 학생
+  dropped_student: 취소된 학생
+  no_projects: 프로젝트 없음
+  exps: 경험
+  terms_lists: 용어 목록들
+  terms_list: 용어 목록
+  terms_review: 용어 검토
+  course: 코스
+  school: 학교
+  schools_edit: 학교 편집
+  rubrics_edit: 평가 기준 편집
+  consent_forms_edit: 동의서 편집
+  courses_edit: 코스 편집
+  reporting: 보고 센터
+  experiences_edit: 경험 편집
+  bingo_games_edit: 용어 목록
+  projects_edit: 프로젝트 편집
+  concepts_edit: 개념 편집
+  active: 활성화됨
+  inactive: 비활성화됨
+  details: 세부 사항
+  description: 설명
+  for: 대상
+  name: 이름
+  family_name: 성
+  given_name: 이름
+  number: 번호
+  member: 팀 멤버
   titles:
-    demonstration: Demonstration
+    demonstration: 시연
   home:
-    title: Home
-    your_tasks: Your Tasks
-    invited: You've been invited!
-    greeting: Hello {{name}}
-    greeting_unknown: Hello!
-    instructor_tasks: Instructor Tasks
-    student_tasks: Tasks for Class
-    task_type: Task Type
-    sapa: Self- and Peer-Assessment
-    terms_list: Terms list submission
+    title: 홈
+    your_tasks: 할 일
+    invited: 초대받았습니다!
+    greeting: 안녕하세요, {{name}}님
+    greeting_unknown: 안녕하세!
+    instructor_tasks: 강사용 할 일
+    student_tasks: 학생용 할 일
+    task_type: 할 일 유형
+    sapa: 자기 평가 및 동료 평가
+    terms_list: 용어 목록 제출
     course_confirm: >
-      You've been added to {{course_list_text}}, but sometimes instructors make
-      mistakes, so please do confirm that you are actually enrolled in
-      {{proper_course_list}} listed below
-    courses_interval: (1)[a course];(2-inf)[ {{count}} courses]
-    courses_proper_interval: (1)[the course];(2-inf)[the {{count}} courses]
-    test_zero: zilch
-    test_one: one
-    test_many: many
-    task_interval: (0)[You do not currently have any tasks due. Check back later or contact your instructor.];(1)[You've got one task at the moment.];(2-inf)[You've got {{count}} tasks today.]
-    enroll_title: Enrollment confirmation
-    enroll_failed_title: Enrollment not possible
+      {{course_list_text}}에 추가되었지만, 때때로 강사들이 실수를 할 수 있으므로 
+      실제로 {{proper_course_list}}에 등록되었는지 확인하세요.
+    courses_interval: (1)[한 개의 수업];(2-inf)[ {{count}}개의 수업]
+    courses_proper_interval: (1)[그 수업];(2-inf)[그 {{count}}개의 수업]
+    test_zero: 없음
+    test_one: 하나
+    test_many: 여러 개
+    task_interval: (0)[현재 할 일이 없습니다. 나중에 다시 확인하거나 강사에게 문의하세요.];(1)[현재 할 일이 하나 있습니다.];(2-inf)[오늘 {{count}}개의 할 일이 있습니다.]
+    enroll_title: 등록 확인
+    enroll_failed_title: 등록 불가
     self_enroll_body: >
-      Would you like to join the {{course_name}} ({{course_number}})
-      course?
+      {{course_name}} ({{course_number}}) 수업에 등록하시겠습니까?
     self_enroll_already_rejected_body: >
-      Please see the instructor for {{course_name}} ({{course_number}})
-      as they previously declined your enrollment request and they must
-      confirm your enrollment themselves.
+      이전에 {{course_name}} ({{course_number}}) 수업 등록이 거부되었습니다. 
+      강사에게 문의해 수동으로 등록을 요청해야 합니다.
     self_enroll_already_requested_body: >
-      You have already requested enrollment in {{course_name}}
-      ({{course_number}}).  Now you must simply wait for an instructor to
-      accept the enrollment.
+      이미 {{course_name}} ({{course_number}}) 수업 등록을 요청했습니다. 
+      강사의 승인을 기다려 주세요.
     self_enroll_already_enrolled_body: >
-      You are already enrolled in {{course_name}} ({{course_number}}).
+      이미 {{course_name}} ({{course_number}}) 수업에 등록되어 있습니다.
     self_enroll_course_closed_body: >
-      The course {{course_name}} ({{course_number}}) is not currently
-      available and therefore you cannot enroll in it.
+      {{course_name}} ({{course_number}}) 수업이 현재 제공되지 않아 등록할 수 없습니다.
     self_enroll_instructor_body: >
-      You are already an instructor (or assistant) in {{course_name}} ({{course_number}})
-      and you cannot enroll in your own course.
-    self_enroll: Enroll me!
-    self_enroll_cancel: Cancel and Return Home
+      이미 {{course_name}} ({{course_number}}) 수업의 강사(또는 조교)로 
+      등록되어 있어 자신의 수업에 등록할 수 없습니다.
+    self_enroll: 나를 등록하세요!
+    self_enroll_cancel: 추소하고 홈으로 돌아가기
     list:
-      type: Type
-      task_name: Task Name
-      course_name: Course Name
-      group_name: Group Name
-      start_date: Open Date
-      next_date: Close Date
-      all_tasks: All
+      type: 유형
+      task_name: 할 일 이름
+      course_name: 수업명
+      group_name: 그룹 이름
+      start_date: 시작 날짜
+      next_date: 종료 날짜
+      all_tasks: 모든 할 일
       consent_form:
-        label: Consent Form
-        absent: Not for Research
-        present: Research Consent Form
-      instructor_task: Instructor Task
+        label: 동의서
+        absent: 연구 목적 아님
+        present: 연구 동의서
+      instructor_task: 강사 할 일
       status:
-        label: Status
-        incomplete: Not Completed
-        complete: Completed
+        label: 상태
+        incomplete: 완료되지 않음
+        complete: 완료됨
