--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -26,6 +26,7 @@ en:
       already_authenticated: "You are already signed in."
       inactive: "Your account is not activated yet."
       invalid: "Invalid %{authentication_keys} or password."
+      email_sign_in: "Invalid email or password."
       locked: "Your account is locked."
       last_attempt: "You have one more attempt before your account is locked."
       not_found_in_database: "Invalid %{authentication_keys} or password."
