--- a/config/locales/home.es.yml
+++ b/config/locales/home.es.yml
@@ -40,7 +40,7 @@ es:
   group_names: Nombres de grupo
   history: Historia
   about_you: About You
-  calc_diversity: Diversidad
+  calc_diversity_hdr: Diversidad
   users: Usuarios
   diversity_score: Puntuación de Diversidad
   calc_diversity_sub: Dime el puntaje!
