Added candidate entry instructions.

--- a/config/locales/candidates.en.yml
+++ b/config/locales/candidates.en.yml
@@ -64,12 +64,16 @@ en:
       def: Clue
     edit:
       title: Complete the term list
+      topic: Topic
+      description: Description
+      for: For
+      instructions_title: Instructions
       instructions: >
         Please read up on the topic above, being sure to go through the
         assigned readings, as well as to find your own materials. Make a
         list of what you believe to be the most important and/or salient
-        terms and enter them, along with clues to help others identify the
-        terms you're describing.
+        terms, concepts and ideas and enter them, along with clues to help
+        others identify the terms you're describing.
       behalf: on behalf of 
       waiting: Still awaiting a response to your group help request
       req_rec: Your teammates in {{grp_name}} want to collaborate
