got rid of ranges and cleaned up date display for experience

--- a/config/locales/experiences.en.yml
+++ b/config/locales/experiences.en.yml
@@ -5,6 +5,9 @@ en:
     active: Active
     timezone_warning: All dates are in the {{timezone}} time zone.
     date_range: Experience dates
+    start_date_lbl: Experience start date
+    date_to_lbl: until
+    end_date_lbl: Experience end date
     create: Create Experience
     save: Save Experience
     errors:
@@ -28,6 +31,7 @@ en:
     reaction_diagnosis: Reaction Diagnosis
     reaction_suggestions: Reaction Suggestions
     start_date_lbl: Experience start date
+    date_to_lbl: until
     end_date_lbl: Experience end date
     close_pnl: Close panel
     create_success: Experience was successfully created.
