--- a/config/locales/projects.en.yml
+++ b/config/locales/projects.en.yml
@@ -13,6 +13,11 @@ en:
     factor_pack: Factor pack
     active_switch: Active
     project_dates: Project Dates
+    start_date_lbl: Start Date
+    start_date_placeholder: Click to select the start date
+    end_date_placeholder: Click to select the close date
+    end_date_lbl: Close Date
+    date_to_lbl: until
     name_lbl: Project Name
     description_lbl: Project Description
     group_create_success: Group successfully created.
