--- a/config/locales/submissions.en.yml
+++ b/config/locales/submissions.en.yml
@@ -1,5 +1,17 @@
 en:
   submissions:
+    feedbacks:
+      demo_feedback_1: >
+        This is an excellent initial submission. There remains work to
+        be done, but it's a fantastic start!
+      demo_feedback_2: >
+        You've made good progress in this iteration and improved on a
+        number of your design decisions through data collection. Keep
+        it up!
+      demo_feedback_3: >
+        You're continuing to improve. This time there are a significant
+        number of technical fixes to the report and the prototypes. You
+        are showing a great deal of growth here. You got this!
     error:
       nothing_submitted: No hay tarea presente
       withdraw_requires_submit: >
